modified:   getR.html 	modified:   style.css

--- a/getR.html
+++ b/getR.html
@@ -19,6 +19,7 @@
       </div>
     </div>
     <button class="btnGetRich">Get Rich</button>
+    <button class="button-63" role="button">Button 63</button>
     <script src="getR.js"></script>
   </body>
 </html>
